[gd_scene format=3 uid="uid://b5we4ccv6c5yp"]

[ext_resource type="Script" uid="uid://d18g5hx153w0" path="res://scripts/main.gd" id="1_o5qli"]
[ext_resource type="PackedScene" uid="uid://dg6tsv01wqj1j" path="res://scenes/enemy_spawn_machine.tscn" id="2_0wfyh"]
[ext_resource type="PackedScene" uid="uid://de5efn574omjt" path="res://scenes/player.tscn" id="2_sugp2"]
[ext_resource type="Shader" uid="uid://bfsmtb567wwwu" path="res://shaders/CRTShader.gdshader" id="2_tipki"]
[ext_resource type="AudioStream" uid="uid://euab3xghe7f1" path="res://audio/noise_swell.mp3" id="4_jyhfs"]
[ext_resource type="PackedScene" uid="uid://y4eejjcgwy64" path="res://scenes/world_clock.tscn" id="7_o6xl0"]
[ext_resource type="PackedScene" uid="uid://ds1tl3eymfccp" path="res://scenes/level_manager.tscn" id="8_choun"]
[ext_resource type="PackedScene" uid="uid://b3nug37fsys0n" path="res://scenes/ui/upgrade_screen.tscn" id="11_ya4ey"]
[ext_resource type="PackedScene" uid="uid://b1kv7haeowpg1" path="res://scenes/ui/cockpit_layer.tscn" id="12_eb6dy"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tipki"]
shader = ExtResource("2_tipki")
shader_parameter/overlay = false
shader_parameter/scanlines_opacity = 0.4
shader_parameter/scanlines_width = 0.25
shader_parameter/grille_opacity = 0.0
shader_parameter/resolution = Vector2(640, 480)
shader_parameter/pixelate = false
shader_parameter/roll = false
shader_parameter/roll_speed = 8.0
shader_parameter/roll_size = 0.0
shader_parameter/roll_variation = 1.8
shader_parameter/distort_intensity = 0.05
shader_parameter/noise_opacity = 0.4
shader_parameter/noise_speed = 5.0
shader_parameter/static_noise_intensity = 0.0410000019475
shader_parameter/aberration = 0.00500004773750006
shader_parameter/brightness = 1.4
shader_parameter/discolor = false
shader_parameter/warp_amount = 0.0
shader_parameter/clip_warp = true
shader_parameter/vignette_intensity = 0.4
shader_parameter/vignette_opacity = 0.5

[sub_resource type="QuadMesh" id="QuadMesh_eb6dy"]

[sub_resource type="Environment" id="Environment_o5qli"]
background_mode = 3
glow_enabled = true
glow_normalized = true
glow_intensity = 1.83
glow_strength = 1.27
glow_bloom = 0.03
glow_blend_mode = 0
fog_light_color = Color(1, 1, 1, 1)
fog_light_energy = 8.25
fog_sun_scatter = 0.9
fog_density = 0.4682
fog_height_density = 0.025
volumetric_fog_density = 0.607
volumetric_fog_emission_energy = 854.4
volumetric_fog_length = 534.18

[node name="Main" type="Node2D" unique_id=193928734]
process_mode = 1
script = ExtResource("1_o5qli")

[node name="World" type="Node" parent="." unique_id=7307695]

[node name="Background" type="ColorRect" parent="World" unique_id=1737748974]
light_mask = 8
visibility_layer = 8
custom_minimum_size = Vector2(4.95, 3.03)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.475
offset_top = -1.515
offset_right = 25.809326
offset_bottom = 14.017822
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(121.850746, 147.71957)
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_default_cursor_shape = 3
color = Color(0.007978929, 0.0006758069, 0.051645726, 1)
metadata/_edit_lock_ = true

[node name="Player" parent="World" unique_id=247561293 instance=ExtResource("2_sugp2")]
unique_name_in_owner = true
position = Vector2(491, 135)

[node name="WorldClock" parent="World" unique_id=896245553 node_paths=PackedStringArray("audio_player") instance=ExtResource("7_o6xl0")]
audio_player = NodePath("../AudioStreamPlayer")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="World" unique_id=2019227226]
stream = ExtResource("4_jyhfs")

[node name="EnemySpawnMachine" parent="World" unique_id=1960937370 instance=ExtResource("2_0wfyh")]

[node name="LevelManager" parent="World" unique_id=759793166 instance=ExtResource("8_choun")]

[node name="HUDLayer" type="CanvasLayer" parent="." unique_id=1084234578]

[node name="CockpitLayer" parent="HUDLayer" unique_id=1829790468 instance=ExtResource("12_eb6dy")]
layer = 6

[node name="RewardScreen" parent="HUDLayer" unique_id=126912765 instance=ExtResource("11_ya4ey")]
layer = 10
visible = false

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=1397239852]
layer = 5
visible = false

[node name="CRTShader" type="MeshInstance2D" parent="CanvasLayer" unique_id=129965520]
material = SubResource("ShaderMaterial_tipki")
position = Vector2(1732.2499, 1108.25)
scale = Vector2(1779.4998, 1793.5)
mesh = SubResource("QuadMesh_eb6dy")

[node name="WorldEnvironment" type="WorldEnvironment" parent="." unique_id=390722321]
environment = SubResource("Environment_o5qli")
